Made card,added gap to css, fixed spelling in HTML

--- a/style.css
+++ b/style.css
@@ -19,4 +19,5 @@ header.container {
 #cards_container {
   display: flex;
   flex-wrap: wrap;
+  gap: 1rem;
 }
